Use new connection method in both HttpConnectionRedirect and HttpClient